--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-rubik);
+  --color-primary: #70C05B;
+  --shadow-default: 2px 4px 8px 0 rgba(0, 0, 0, 0.1);
+  --shadow-button-hover: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+  --shadow-button-active: inset 0px 2px 0px 0px rgba(0, 0, 0, 0.2);
+  --shadow-article: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +22,7 @@
 }
 
 body {
-  background: var(--background);
+  background: #FBF8EC;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-rubik), sans-serif;
 }
